--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,9 +1,41 @@
-## $HOSTNAME
+#user  nobody;
+worker_processes  1;
 
-# Redirect all HTTP to HTTPS *except* the ACME challenges (Let's Encrypt TLS certificate
-# domain validation challenges) path, which must be served over HTTP per the ACME spec
-# (due to some Apache vulnerability).
-server {
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
+
+#pid        logs/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+    #access_log  logs/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    #gzip  on;
+    ## $HOSTNAME
+
+    # Redirect all HTTP to HTTPS *except* the ACME challenges (Let's Encrypt TLS certificate
+    # domain validation challenges) path, which must be served over HTTP per the ACME spec
+    # (due to some Apache vulnerability).
+    server {
 	listen 80;
 	listen [::]:80;
 
@@ -27,10 +59,10 @@ server {
 		# tool knows to store challenge response files.
 		alias $STORAGE_ROOT/ssl/lets_encrypt/webroot/.well-known/acme-challenge/;
 	}
-}
+    }
 
 # The secure HTTPS server.
-server {
+    server {
 	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
 
@@ -44,4 +76,5 @@ server {
 	ssl_certificate_key $SSL_KEY;
 
 	# ADDITIONAL DIRECTIVES HERE
+    }
 }
